--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -5,6 +5,6 @@ metadata:
 spec:
     type: LoadBalancer
     ports:
-    - port: 80/tcp 
+    - port: 80
     selector:
         app: joykhubglueindocker
